# M1S2

./: .gitignore  README.md
APR/TPs/TP1/: CMakeLists.txt
APR/TPs/TP1/src/exercise1/: Exercise1.cpp  Exercise1.h  main.cpp
APR/TPs/TP1/src/exercise2/: Exercise2.cpp  Exercise2.h  main.cpp
APR/TPs/TP1/src/exercise3/: Exercise3.cpp  Exercise3.h  main.cpp
APR/TPs/TP1/src/exercise4/: Exercise4.cpp  Exercise4.h  main.cpp
APR/TPs/TP1/src/exercise5/: Exercise5.cpp  Exercise5.h  main.cpp
APR/TPs/TP1/student/exo2/: student.cpp  student.h
APR/TPs/TP1/student/exo3/: student.cpp
APR/TPs/TP1/student/exo4/: student.h
APR/TPs/TP1/student/exo5/: student.cpp  student.h
APR/TPs/TP1/utils/: chronoCPU.hpp
APR/TPs/TP10/: CMakeLists.txt  build.bat  build.sh
APR/TPs/TP10/src/1-Resolution/: Resolution.h  main.cc
APR/TPs/TP10/src/2-Check/: check.cc
APR/TPs/TP10/src/2-Produit/: Produit.h  main.cc
APR/TPs/TP10/src/utils/: DistributedBlockVector.h  DistributedRowMatrix.h
APR/TPs/TP10/students/1-Resolution/: Resolution.cc
APR/TPs/TP10/students/2-Produit/: Produit.cc
APR/TPs/TP10/utils/: DistributedBlockVector.h  DistributedRowMatrix.h  chronoCPU.cc
APR/TPs/TP10/utils/MPI/: OPP_MPI.h  OPP_MPI_Ring.h  OPP_MPI_Torus.h  OPP_MPI_base.h
APR/TPs/TP11/: CMakeLists.txt  build.bat  build.sh
APR/TPs/TP11/src/1-DecouverteTopologie/: main.cc
APR/TPs/TP11/src/2-Transposition/: Transposition.h  main.cc
APR/TPs/TP11/src/3-Produit/: main.cc
APR/TPs/TP11/src/4-Cannon/: Produit.h
APR/TPs/TP11/src/5-Fox/: main.cc
APR/TPs/TP11/src/utils/: DistributedBlockMatrix.h  DistributedBlockVector.h
APR/TPs/TP11/students/2-Transposition/: Transposition.cc
APR/TPs/TP11/students/3-Produit/: Produit.cc
APR/TPs/TP11/students/4-Cannon/: Produit.cc
APR/TPs/TP11/students/5-Fox/: Produit.cc
APR/TPs/TP11/students/6-Snyder/: Produit.cc
APR/TPs/TP11/utils/: DistributedBlockMatrix.h  chronoCPU.cc  chronoCPU.h
APR/TPs/TP11/utils/MPI/: OPP_MPI.h  OPP_MPI_Ring.h  OPP_MPI_Torus.h  OPP_MPI_base.h
APR/TPs/TP2/: CMakeLists.txt  build.bat  rapport.txt
APR/TPs/TP2/src/exercise1/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP2/src/exercise2/: ExerciseImpl.cpp  ExerciseImpl.h
APR/TPs/TP2/src/exercise3/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP2/src/exercise4/: ExerciseImpl.cpp  ExerciseImpl.h
APR/TPs/TP2/src/exercise5/: ExerciseImpl.cpp  ExerciseImpl.h
APR/TPs/TP2/student/: rapport.txt
APR/TPs/TP2/student/exo1/: student.cpp  student.h
APR/TPs/TP2/student/exo2/: student.cpp  student.h
APR/TPs/TP2/student/exo3/: student.cpp  student.h
APR/TPs/TP2/student/exo4/: student.cpp  student.h
APR/TPs/TP2/student/exo5/: student.cpp  student.h
APR/TPs/TP2/utils/: Exercise.h  OPP.h  StudentWork.h
APR/TPs/TP3/: CMakeLists.txt  build.bat  build.sh
APR/TPs/TP3/src/exercise1/: ExerciseImpl.cpp  ExerciseImpl.h
APR/TPs/TP3/src/exercise2/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP3/src/exercise3/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP3/src/exercise4/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP3/src/exercise5/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP3/student/exo1/: student.cpp  student.h
APR/TPs/TP3/student/exo2/: student.cpp  student.h
APR/TPs/TP3/student/exo3/: student.cpp  transform.h
APR/TPs/TP3/student/exo4/: gather.h  scatter.h  student.cpp  student.h
APR/TPs/TP3/student/exo5/: reduce.h  student.cpp  student.h
APR/TPs/TP3/utils/: OPP.cpp  OPP.h  chronoCPU.cpp
APR/TPs/TP4/: CMakeLists.txt  build.bat  build.sh
APR/TPs/TP4/src/exercise1/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP4/src/exercise2/: ExerciseImpl.cpp  ExerciseImpl.h
APR/TPs/TP4/student/exo1/: inclusive_scan.h  student.h
APR/TPs/TP4/student/exo2/: exclusive_scan.h  student.h
APR/TPs/TP4/utils/: Exercise.h  OPP.h  iMatrix22.h
APR/TPs/TP5/: CMakeLists.txt  build.bat  build.sh
APR/TPs/TP5/src/exercise1/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP5/src/exercise2/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP5/src/exercise3/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP5/src/exercise4/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP5/src/exercise5/: ExerciseImpl.cpp  ExerciseImpl.h  main.cpp
APR/TPs/TP5/student/exo1/: student.cpp  student.h
APR/TPs/TP5/student/exo2/: student.cpp  student.h
APR/TPs/TP5/student/exo3/: student.cpp  student.h
APR/TPs/TP5/student/exo4/: partition.h  student.cpp  student.h
APR/TPs/TP5/student/exo5/: student.cpp  student.h
APR/TPs/TP5/student/previous/: exclusive_scan.h  inclusive_scan.h  scatter.h  transform.h
APR/TPs/TP5/utils/: Exercise.h  OPP.cpp  OPP.h  iMatrix22.h
APR/TPs/TP8/: CMakeLists.txt  TP8.ipynb  build.bat  build.sh
APR/TPs/TP8/src/exercise1/: ExerciseImpl.cu  ExerciseImpl.h  main.cu
APR/TPs/TP8/src/exercise2/: ExerciseImpl.cu  ExerciseImpl.h  main.cu
APR/TPs/TP8/src/exercise3/: ExerciseImpl.cu  ExerciseImpl.h  main.cu
APR/TPs/TP8/src/exercise4/: ExerciseImpl.cu  ExerciseImpl.h  main.cu
APR/TPs/TP8/src/reference/: ImageEqualizer.cpp  ImageEqualizer.h
APR/TPs/TP8/student/exo1/: student.cu  student.h
APR/TPs/TP8/student/exo2/: student.cu  student.h
APR/TPs/TP8/student/exo3/: student.cu  student.h
APR/TPs/TP8/student/exo4/: student.cu  student.h
APR/TPs/TP8/utils/: Exercise.h  ExerciseGPU.h  OPP.h  OPP_cuda.cuh  chronoCPU.hpp  chronoGPU.cu  chronoGPU.hpp  helper_string.h  iMatrix22.cu  iMatrix22.h  ppm.cpp  ppm.h  spinlock.h
APR/TPs/TP8/utils/OPP/: OPP_barrier.h  OPP_cuda_buffer.cuh  OPP_cuda_functor.cuh  OPP_cuda_histogram.cuh  OPP_cuda_inclusive_scan.cuh  OPP_cuda_reduce.cuh  OPP_cuda_tools.cuh  OPP_iterator.h  OPP_tools.h
APR/TPs/TP9/: CMakeLists.txt  build.bat  build.sh
APR/TPs/TP9/src/1-PremierPas/: main.cc
APR/TPs/TP9/src/3-1-broadcast/: Broadcast.h  main.cc
APR/TPs/TP9/src/3-2-broadcast/: Broadcast.h  main.cc
APR/TPs/TP9/src/utils/: chronoCPU.h
APR/TPs/TP9/students/2-Communication/: main.cc
APR/TPs/TP9/students/3-1-broadcast/: Broadcast.cc
APR/TPs/TP9/utils/: chronoCPU.cc
(+318 files in other folders)
